force-app/main/default/objects/Assign_SF_Resources_to_User__mdt/Assign_SF_Resources_to_User__mdt.object-meta.xml
<CustomObject>
    <description>Used to assign users to permission sets, public groups, and queues</description>
    <label>Assign SF Resources to User</label>
    <pluralLabel>Assign SF Resources to Users</pluralLabel>
</CustomObject>