force-app/main/default/objects/Assign_SF_Resources_to_User__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows an admin to disable assignment rules</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>