force-app/main/default/objects/Assign_SF_Resources_to_User__mdt/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <description>Determines the type of assignment</description>
    <label>Assignment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permission Set</fullName>
                <default>true</default>
                <label>Permission Set</label>
            </value>
            <value>
                <fullName>Public Group</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>User Type</fullName>
            </value>
            <value>
                <fullName>Package License</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>