force-app/main/default/objects/Assign_SF_Resources_to_User__mdt/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <label>Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>